# partickes

./: .gitignore  CMakeLists.txt  README.md  makefile
code/: Engine.cpp  Engine.h  Matrices.cpp  Particle.cpp  Particle.h
